k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-workshop
  namespace: apps
  labels:
    app: nest-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-workshop
  template:
    metadata:
      labels:
        app: nest-workshop
    spec:
      imagePullSecrets:
        - name: nexus-docker
      containers:
      - name: nest-workshop
        image: nest-workshop:0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
