k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nest-workshop
  namespace: apps
  labels:
    app: nest-workshop
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: nest-workshop
